--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -11,36 +11,7 @@
     <title>Корзина</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/product/list}">Каталог товаров</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">
-                        Меню
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Мои заказы</a></li>
-                        <li><a class="dropdown-item" th:href="@{/user_cart}">Моя корзина</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" th:href="@{/logout}">Выйти из аккаунта</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Название товара" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Поиск</button>
-            </form>
-        </div>
-    </div>
-</nav>
+<header th:replace="navbar"></header>
 <h2>Корзина:</h2>
 <div class="container">
     <div class="d-flex flex-row mb-3">
@@ -81,22 +52,14 @@
 <div class="container">
     <div class="d-flex flex-row mb-3">
         <div class="col-md-6">
-            <div class="card">
-                <div class="card-body">
-                    <form th:action="@{/product/list}">
-                        <button type="submit" class="btn btn-secondary">Назад</button>
-                    </form>
-                </div>
+            <div class="card-body">
+                <form th:action="@{/product/list}">
+                    <button type="submit" class="btn btn-secondary">Назад</button>
+                </form>
             </div>
         </div>
     </div>
 </div>
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous">
-</script>
 </body>
 </html>
 
