--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -18,21 +18,21 @@
     <form method="post" th:action="@{/adduser}" th:object="${user}" class="mt-3">
         <div class="mb-3">
             <label for="login" class="form-label">Логин пользователя</label>
-            <input type="text" id="login" th:field="*{login}" class="form-control">
+            <input type="text" id="login" th:field="*{login}" class="form-control" required>
         </div>
         <div class="mb-3">
             <label for="name" class="form-label">Имя пользователя</label>
-            <input type="text" id="name" th:field="*{name}" class="form-control">
+            <input type="text" id="name" th:field="*{name}" class="form-control" required>
         </div>
         <div class="mb-3">
             <label for="surname" class="form-label">Фамилия пользователя</label>
-            <input type="text" id="surname" th:field="*{surname}" class="form-control">
+            <input type="text" id="surname" th:field="*{surname}" class="form-control" required>
         </div>
         <div class="mb-3">
             <label for="password" class="form-label">Введите пароль</label>
-            <input type="password" id="password" th:field="*{password}" class="form-control">
+            <input type="password" id="password" th:field="*{password}" class="form-control" required>
         </div>
-        <button type="submit" class="btn btn-outline-secondary">Зарегистрироваться</button>
+        <button type="submit" class="btn btn-outline-secondary">Зарегистрировать</button>
     </form>
 </div>
 </body>
